--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<p>html file</p>
+<!DOCTYPE html>
+<html>
+    <head>
+        ISRO
+    </head>
+    <body>
+        <h1>
+            INDIAN SPACE RESEARCH ORGANISATION
+        </h1>
+        <p1>
+            The Indian Space Research Organisation is the national space agency of India. <br>It operates as the primary research and development arm of the Department of Space, which is directly overseen by the Prime Minister of India, while the Chairman of ISRO also acts as the executive of DoS.
+        </p1>
+        <img src="C:\Users\Welcome-V\Desktop\webdevelopment\webdev"></img>
+    </body>
+
+</html>
+
+    
+
+
